--- a/projects/my-lib/package.json
+++ b/projects/my-lib/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-lib",
+  "name": "@my-org/my-lib",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^17.3.0",
@@ -20,5 +20,8 @@
   "devDependencies": {
     "copyfiles": "file:../../node_modules/copyfiles",
     "typescript": "file:../../node_modules/typescript"
+  },
+  "publishConfig": {
+    "registry": "http://localhost:4873"
   }
 }
