--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "my-lib",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build my-lib",
+    "build:schematics": "cd ./projects && npm run build:schematics",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
