--- a/projects/my-lib/package.json
+++ b/projects/my-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@my-org/my-lib",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "peerDependencies": {
     "@angular/common": "^17.3.0",
     "@angular/core": "^17.3.0"
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "build:schematics": "tsc -p tsconfig.schematics.json",
-    "postbuild:schematics": "copyfiles schematics/migrations.json schematics/collection.json ../../dist/my-lib/"
+    "postbuild:schematics": "copyfiles schematics/migrations.json schematics/collection.json ../../dist/my-org/my-lib/"
   },
   "devDependencies": {
     "copyfiles": "file:../../node_modules/copyfiles",
