--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "skipLibCheck": true,
     "paths": {
       "my-lib": [
-        "./dist/my-lib"
+        "./dist/my-org/my-lib"
       ]
     },
     "esModuleInterop": true,
