--- a/projects/my-lib/tsconfig.schematics.json
+++ b/projects/my-lib/tsconfig.schematics.json
@@ -30,6 +30,7 @@
     "schematics/**/*"
   ],
   "exclude": [
-    "schematics/*/files/**/*"
+    "schematics/*/files/**/*",
+    "**/*.spec.ts"
   ]
 }
