--- a/projects/my-lib/package.json
+++ b/projects/my-lib/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@my-org/my-lib",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "peerDependencies": {
     "@angular/common": "^17.3.0",
     "@angular/core": "^17.3.0"
   },
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "ng-morph": "^4.0.6"
   },
   "sideEffects": false,
   "schematics": "./schematics/collection.json",
