--- a/projects/my-lib/package.json
+++ b/projects/my-lib/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "build:schematics": "tsc -p tsconfig.schematics.json",
-    "postbuild:schematics": "copyfiles schematics/migrations/migrations.json schematics/collection.json ../../dist/my-org/my-lib/"
+    "postbuild:schematics": "copyfiles schematics/migrations/migrations.json schematics/collection.json schematics/**/files/** ../../dist/my-org/my-lib/"
   },
   "devDependencies": {
     "copyfiles": "file:../../node_modules/copyfiles",
