--- a/projects/my-lib/tsconfig.schematics.json
+++ b/projects/my-lib/tsconfig.schematics.json
@@ -27,10 +27,10 @@
     ]
   },
   "include": [
-    "schematics/**/*"
+    "schematics/**/*",
+    "schematics/*/files/**/*"
   ],
   "exclude": [
-    "schematics/*/files/**/*",
     "**/*.spec.ts"
   ]
 }
